# MedSAMgui

./: run.bat  run.sh
medsam-uv/: pyproject.toml  server.py
webapp/: index.html  vite.config.js
webapp/src/: App.css  App.jsx  index.css
