[project]
name = "medsam-uv"
version = "0.1.0"
requires-python = ">=3.10,<3.11"
dependencies = [
    "fastapi>=0.138.0",
    "medsam",
    "python-multipart>=0.0.32",
    "torch==2.6.0",
    "torchvision==0.21.0",
    "uvicorn[standard]>=0.49.0",
]

# PyTorch:
#   - Linux / Windows -> CUDA 12.4 wheels from the pytorch-cu124 index
#   - macOS           -> marker is false, so it falls back to the default
#                        index (PyPI), which serves the macOS (MPS) build.
#                        download.pytorch.org has no macOS CUDA wheels.
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
    { index = "pytorch-cu124", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
medsam = { path = "../MedSAM", editable = true }
